change password modal,logout modal

--- a/src/page/login/login.css
+++ b/src/page/login/login.css
@@ -28,7 +28,7 @@
 .loginPage-formContainer .ant-input {
   background-color: #e8f0fe !important;
 }
-.ant-input-affix-wrapper {
+.loginPage-formContainer .ant-input-affix-wrapper {
   background-color: #e8f0fe !important;
 }
 
