--- a/src/page/home/home.css
+++ b/src/page/home/home.css
@@ -15,3 +15,9 @@
 .home-content {
   /* border: 1px solid pink; */
 }
+
+.home-sider .ant-menu-item-selected {
+  background-color: #233f6b !important;
+
+  /* #011529 */
+}
