dynamic trip info, section layout, dynamic passenger name input field

--- a/src/page/bookingDetails/bookingDetails.css
+++ b/src/page/bookingDetails/bookingDetails.css
@@ -1,12 +1,18 @@
 .booking-details-container {
   display: flex;
-  flex-direction: row;
 
   padding: 10px;
+  height: 93vh;
+
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 .booking-details-left {
   margin-right: 5px;
   flex: 1;
+
+  display: flex;
+  flex-direction: column;
 }
 
 .legend {
@@ -33,16 +39,18 @@
 }
 .seat-map {
   border: 1px solid lightgray;
-  height: 700px;
+  /* height: 100%; */
   border-radius: 10px;
   background-color: white;
+  flex: 1;
 }
 .booking-details-right {
   margin-left: 5px;
   flex: 1;
 }
 
-.booking-details-right span {
+.trip-info span,
+.ticket-info span {
   color: gray;
   font-weight: 500;
   font-family: "Open Sans", sans-serif;
@@ -50,31 +58,49 @@
 
 .trip-info {
   border: 1px solid lightgray;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
   padding: 10px;
   border-radius: 10px;
   background-color: white;
 }
 .ticket-info {
   border: 1px solid lightgray;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
   padding: 15px;
-  border-radius: 10px;
-  background-color: white;
-}
-.passenger-details {
-  border: 1px solid lightgray;
-  /* height: 200px; */
-  margin-bottom: 10px;
-  padding: 10px;
   border-radius: 10px;
   background-color: white;
 }
 .contact-details {
   border: 1px solid lightgray;
   /* height: 190px; */
-  margin-bottom: 10px;
+  margin-bottom: 5px;
   padding: 10px;
   border-radius: 10px;
   background-color: white;
+}
+.contact-details input {
+  margin-bottom: 5px;
+}
+.passenger-details {
+  border: 1px solid lightgray;
+  height: auto;
+  padding: 10px;
+  border-radius: 10px;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+}
+
+.passenger-details input {
+  margin-bottom: 5px;
+}
+
+.book-button {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  align-self: flex-end;
+  width: 150px;
+  /* border-color: teal;*/
+  background-color: teal;
+  color: white;
 }
