state mgt for input fields, booking info display,book function for api

--- a/src/components/Seatmap/SeatmapDefault.css
+++ b/src/components/Seatmap/SeatmapDefault.css
@@ -71,3 +71,8 @@
     display: flex;
     align-items: center;
 }
+
+.selected-seats {
+    color: #333 !important;
+    font-weight: bolder !important;
+}
